<resources>
    <string name="app_name">Student</string>
    <string name="add_student">ADD student</string>
    <string name="list_students">List Students</string>
    <string name="firstname">firstname</string>
    <string name="email_address">email address</string>
    <string name="lastname">lastname</string>
    <string name="add_user">ADD USER</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="completed_degrees"><i>*** Completed degrees ***</i></string>
    <string name="kandidaatin_tutkinto">Kandidaatin tutkinto</string>
    <string name="diploma_insinoorin_tutkinto">Diploma-insinöörin tutkinto</string>
    <string name="tekniikan_tohtorin_tutkinto">Tekniikan-tohtorin tutkinto</string>
    <string name="uimamaisteri">Uimamaisteri</string>
    <string name="sahkotekniikka">Sähkötekniikka</string>
    <string name="laskennallinen_tekniikka">Laskennallinen tekniikka</string>
    <string name="tuotantotalous">Tuotantotalous</string>
    <string name="tietotekniikka">Tietotekniikka</string>
</resources>